resolve image jumping issue, reset background attachment to fixed

--- a/css/work.css
+++ b/css/work.css
@@ -225,12 +225,6 @@ body {
 
 @media only screen and (max-width: 414px) {
 
-	.project {
-		background-size: cover;
-		background-attachment: scroll;
-		background-position: center;
-	}
-
 	.work_preview_text {
 		opacity: 1;
 		top: 17px;
